[package]
name = "ruckus"
description = "ChucK creative coding toolkit in Rust"
version = "0.1.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"

[lib]
name = "ruckus"
path = "src/lib.rs"

[[bin]]
name = "ruck"
path = "src/ruck.rs"

[dependencies]
chuck-sys = { version = "0.1.0", path = "chuck-sys" } #ffi
osc_address = "0.2.2" #type-safe abstraction over serde_osc
serde_bytes = "0.11.1" #for wrapping OSC blobs
serde_osc = "0.4.2" #serialize OSC data

[dev-dependencies]
changelog = "0.3.3"  #generate changelog
just = "0.4.2" #run build tasks
