[package]
name = "ruckus"
description = "ChucK creative coding toolkit in Rust"
version = "0.1.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"

[lib]
name = "ruckus"
path = "src/lib.rs"

[[bin]]
name = "ruck"
path = "src/ruck.rs"

[dependencies]
chuck-sys = { version = "0.1.0", path = "chuck-sys" } #ffi
osc_address = "0.2.2"
midir = "0.5.0"
rsoundio = "0.1.6"
serde_bytes = "0.11.2"
serde_osc = "0.4.2"
serial = "0.4.0"
sndfile-sys = "0.2.0"

[dev-dependencies]
assert_cmd = "0.11.1"
changelog = "0.3.3"
just = "0.4.4"

