[package]
name = "chuck-sys"
description = "Low-level bindings to libchuck"
version = "0.1.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"

[features]
default = ["static", "unix"] #if no feature flag is specified then unix-like os is assumed
dynamic = []
static = []
unix = []
win = []

[dependencies]
bitflags = "1.0.4"
# cfg-if = "0.1.7"
libc = "0.2.51"

[build-dependencies]
# cc = "1.0.35"
# bindgen = "0.49.0"
dotenv = "0.13.0"
pkg-config = "0.3.14"