[package]
name = "chuck-sys"
description = "Low level binding to ChucK VM"
version = "0.1.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"
build = "build.rs"

[lib]
name = "chuck_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2.53"

[build-dependencies]
bindgen = "0.49.0"
cmake = "0.1.38"
dotenv = "0.13.0"
