[package]
name = "chuck-sys"
description = "Low level bindings to ChucK VM"
version = "0.1.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
edition = "2018"
build = "build.rs"

[features]
# default = ["stat"]
dyn = []
stat = []

[lib]
name = "chuck_sys"
path = "src/lib.rs"

[dependencies]
bitflags = "1.0.4"
cfg-if = "0.1.9"
# jack = "0.6.0"
libc = "0.2.55"
midir = "0.5.0"
sdl2 = "0.32.2"
serial = "0.4.0"

[build-dependencies]
bindgen = "0.49.2"
cmake = "0.1.40"
dotenv = "0.14.1"
