[package]
name = "ruck"
description = "A Rust wrapper around the ChucK command line interface"
version = "0.2.0"
authors = ["Andrew Prentice <scalarwaves@null.net>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
exclude = ["justfile"]
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/tonal-glyph/ruckus"
documentation = "https://docs.rs/crate/ruck"
keywords = ["cli", "chuck", "audio", "linux"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "ruck"
path = "src/main.rs"
